# prakticheskaya-rabota-1

./: Makefile  main.py  pyproject.toml
games_project_bolzhatov/: engine.py
games_project_bolzhatov/VDgames/: cli.py  vd_main.py
games_project_bolzhatov/VDgames/scripts/: VDmain.py  vd_even.py  vd_games.py  vd_main.py
games_project_bolzhatov/games/: calc_game.py  gcd_game.py
prakticheskaya_rabota_1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: brain_calc.py  brain_gcd.py
