[project]
name = "prakticheskaya-rabota-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]


[project.scripts]
VD_games = "games_project_bolzhatov.VDgames.scripts.VDmain:main"

[tool.uv]
package = true

