[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games-project-bolzhatov"
version = "0.1.0"
description = "Практическая работа по разработке игр"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
brain-calc = "scripts.brain_calc:main"
brain-gcd = "scripts.brain_gcd:main"
